--- a/moveit.next/src/styles/components/Countdown.module.css
+++ b/moveit.next/src/styles/components/Countdown.module.css
@@ -58,6 +58,22 @@
     transition: background-color 0.2s;
 }
 
-.startCountdownButton:hover{
+.startCountdownButton:not(:disabled):hover{
     background: var(--blue-dark);
 }
+
+.startCountdownButtonActive{
+   background-color: var(--white);
+   color: var(--title);
+}
+
+.startCountdownButtonActive:not(:disabled):hover{
+    background-color: var(--red);
+    color: var(--white);   
+ }
+
+ .startCountdownButton:disabled{
+    background: var(--white);
+    color: var(--text);
+    cursor:not-allowed;
+ }
