--- a/moveit.next/src/styles/components/ChallengeBox.module.css
+++ b/moveit.next/src/styles/components/ChallengeBox.module.css
@@ -12,6 +12,7 @@
     justify-content: center;
 
     text-align: center;
+    margin-left: 5rem;
 }
 
 .challengeNotActive{
@@ -36,5 +37,76 @@
 
 .challengeNotActive p img{
    margin-bottom: 1rem;
+} 
+
+.challengeActive{
+   height: 100%;
+   display: flex;
+   flex-direction: column;
 }
 
+.challengeActive header{
+    color: var(--blue);
+    font-weight:600;
+    font-size: 1.25rem;
+    padding: 0 2rem 1.5rem;
+    border-bottom: 1px solid var(--gray-line);
+}
+
+.challengeActive main{
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    /* essa ultima linha só organiza as coisas em coluna ou em linha */
+    align-items: center;
+    justify-content: center; 
+    /* essas 4 ultimas linhas resolvem quando quer centralizar coisas  */
+}
+
+.challengeActive main strong{
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--title);
+    margin: 1.5rem 0 1rem;
+}
+
+.challengeActive main p{
+    line-height: 1.5;
+}
+
+.challengeActive footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+.challengeActive footer button{
+    height: 3rem;
+
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 0;
+    border-radius: 5px;
+    
+    color: var(--white);
+
+    font-size: 1rem;
+    font-weight: 600;
+
+    transition: filter 0.2s;
+}
+
+.challengeActive footer button.challengeFailButton{
+    background-color: var(--red);
+}
+
+.challengeActive footer button.challengeCompleteButton{
+    background-color: var(--green);
+}
+
+.challengeActive footer button:hover{
+    filter:brightness(0.9);
+}
